--- a/java-maven-sonar-argocd-helm-k8s/spring-boot-app/JenkinsFile
+++ b/java-maven-sonar-argocd-helm-k8s/spring-boot-app/JenkinsFile
@@ -8,7 +8,7 @@ pipeline {
   stages {
     stage('Checkout') {
       steps {
-        git branch: 'main', url: 'https://github.com/Soumyajit-Rout/Jenkins-Zero-To-Hero.git', credentialsId: 'github-credentials-id'
+        git branch: 'main', url: 'https://github.com/Samitaprava/Jenkins-Zero-To-Hero.git', credentialsId: 'github'
       }
     }
     stage('Build and Test') {
@@ -20,7 +20,7 @@ pipeline {
     }
     stage('Static Code Analysis') {
       environment {
-        SONAR_URL = "http://13.38.32.236:9000"
+        SONAR_URL = "http://3.85.226.46:9000/"
       }
       steps {
         withCredentials([string(credentialsId: 'sonarqube', variable: 'SONAR_AUTH_TOKEN')]) {
@@ -30,15 +30,15 @@ pipeline {
     }
     stage('Build and Push Docker Image') {
       environment {
-        DOCKER_IMAGE = "soumyajitrout/ultimate-cicd:${BUILD_NUMBER}"
+        DOCKER_IMAGE = "samitaprava/ultimate-cicd:${BUILD_NUMBER}"
         // DOCKERFILE_LOCATION = "java-maven-sonar-argocd-helm-k8s/spring-boot-app/Dockerfile"
-        REGISTRY_CREDENTIALS = credentials('docker-cred')
+        REGISTRY_CREDENTIALS = credentials('dockerhub')
       }
       steps {
         script {
             sh 'cd java-maven-sonar-argocd-helm-k8s/spring-boot-app && docker build -t ${DOCKER_IMAGE} .'
             def dockerImage = docker.image("${DOCKER_IMAGE}")
-            docker.withRegistry('https://index.docker.io/v1/', "docker-cred") {
+            docker.withRegistry('https://index.docker.io/v1/', "dockerhub") {
                 dockerImage.push()
             }
         }
@@ -47,15 +47,15 @@ pipeline {
     stage('Update Deployment File') {
         environment {
             GIT_REPO_NAME = "Jenkins-Zero-To-Hero"
-            GIT_USER_NAME = "Soumyajit-Rout"
+            GIT_USER_NAME = "Samitaprava"
         }
         steps {
             withCredentials([string(credentialsId: 'github', variable: 'GITHUB_TOKEN')]) {
                 sh '''
                     git config user.email "soumyajit.xyz@gmail.com"
-                    git config user.name "Soumyajit Rout"
+                    git config user.name "Samita Prava Jena"
                     git checkout main
-                    IMAGE_NAME=soumyajitrout/ultimate-cicd:${BUILD_NUMBER}
+                    IMAGE_NAME=samitaprava/ultimate-cicd:${BUILD_NUMBER}
                     sed -i "s|image:.*|image: ${IMAGE_NAME}|g" java-maven-sonar-argocd-helm-k8s/spring-boot-app-manifests/deployment.yml
                     git add java-maven-sonar-argocd-helm-k8s/spring-boot-app-manifests/deployment.yml
                     git commit -m "Update deployment image to version ${BUILD_NUMBER}"
